Project in VS2010

--- a/MajabajaGame/MajabajaGame/MajabajaGame/MajabajaGame.csproj
+++ b/MajabajaGame/MajabajaGame/MajabajaGame/MajabajaGame.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{4F430BDF-6BC6-4FE1-92A7-E5B0681E37CA}</ProjectGuid>
+    <ProjectGuid>{956C168E-4685-4DF3-8522-AE93BE656C6C}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">Windows Phone</Platform>
@@ -9,13 +9,14 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MajabajaGame</RootNamespace>
     <AssemblyName>MajabajaGame</AssemblyName>
-    <XnaRefreshLevel>1</XnaRefreshLevel>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows Phone</XnaPlatform>
     <XnaProfile>Reach</XnaProfile>
-    <XnaCrossPlatformGroupID>21ac0095-9e9d-4adc-b34b-0bd74d71a27b</XnaCrossPlatformGroupID>
+    <XnaCrossPlatformGroupID>70354b9d-82ba-46fb-96b4-9f45dc92245a</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
+    <XnaRefreshLevel>1</XnaRefreshLevel>
     <WPTombstoneEnabled>false</WPTombstoneEnabled>
     <XapFilename>$(AssemblyName).xap</XapFilename>
     <SilverlightManifestTemplate>Properties\AppManifest.xml</SilverlightManifestTemplate>
