--- a/MajabajaGame/MajabajaGame/MajabajaGame/MajabajaGame.csproj
+++ b/MajabajaGame/MajabajaGame/MajabajaGame/MajabajaGame.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="CharacterTile.cs" />
+    <Compile Include="GameStates\DeathState.cs" />
     <Compile Include="GameObjects\Button.cs" />
     <Compile Include="GameStates\AbstractGameState.cs" />
     <Compile Include="GameStates\Level1State.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="GameStates\MainMenuState.cs" />
     <Compile Include="GameStates\PauseState.cs" />
     <Compile Include="GameObjects\LifeBar.cs" />
+    <Compile Include="LevelSelectState.cs" />
     <Compile Include="MapCell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tile.cs" />
